@@ -13,6 +13,7 @@ export(rlda.bernoulli)
 export(rlda.bernoulliSB)
 export(rlda.multinomial)
 export(rlda.binomial)
+export(rlda.binomialRemote)
 export(plot.rlda)
 export(predict.rlda)
 export(summary.rlda)
